--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="name.osher.gil.minivmac"
-      android:versionCode="25" android:versionName="1.0">
+      android:versionCode="26" android:versionName="1.0.1">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name="name.osher.gil.minivmac.MiniVMac"
                   android:label="@string/app_name"
@@ -15,6 +15,7 @@
         </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <supports-screens android:largeScreens="true" android:anyDensity="false" />
 </manifest> 
