--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -5,13 +5,15 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name="name.osher.gil.minivmac.MiniVMac"
                   android:label="@string/app_name"
-                  android:launchMode="singleInstance"
+                  android:launchMode="standard"
                   android:allowTaskReparenting="true"
                   android:configChanges="keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="name.osher.gil.minivmac.CreateDisk">
         </activity>
 
     </application>
