--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="name.osher.gil.minivmac"
-      android:versionCode="29" android:versionName="1.1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
-        <activity android:name="name.osher.gil.minivmac.MiniVMac"
+      package="name.osher.gil.minivmac.ii"
+      android:versionCode="1" android:versionName="2.0.0">
+    <application android:icon="@drawable/minivmacii48" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
+        <activity android:name="name.osher.gil.minivmac.ii.MiniVMac"
                   android:label="@string/app_name"
                   android:launchMode="standard"
                   android:allowTaskReparenting="true"
@@ -13,7 +13,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="name.osher.gil.minivmac.CreateDisk">
+        <activity android:name="name.osher.gil.minivmac.ii.CreateDisk">
         </activity>
 
     </application>
