--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name="name.osher.gil.minivmac.CreateDisk">
         </activity>
+        <activity android:name="name.osher.gil.minivmac.SettingsActivity">
+        </activity>
     </application>
 
 </manifest>
