--- a/minivmac/build.gradle
+++ b/minivmac/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         versionCode 40
 
-        minSdkVersion 7
+        minSdkVersion 9
         targetSdkVersion 23
 
         ndk {
@@ -101,4 +101,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+
+    compile 'com.nononsenseapps:filepicker:2.4.2'
 }
