--- a/minivmac/src/main/AndroidManifest.xml
+++ b/minivmac/src/main/AndroidManifest.xml
@@ -24,6 +24,15 @@
         </activity>
         <activity android:name="name.osher.gil.minivmac.SettingsActivity">
         </activity>
+        <activity
+            android:name="com.nononsenseapps.filepicker.FilePickerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/FilePickerTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.GET_CONTENT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
