--- a/minivmac/build.gradle
+++ b/minivmac/build.gradle
@@ -4,18 +4,14 @@ Properties props = new Properties()
 props.load(new FileInputStream(rootProject.file("release.properties")))
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         versionCode 40
 
         minSdkVersion 9
-        targetSdkVersion 23
-
-        ndk {
-            moduleName "mnvmcore"
-        }
+        targetSdkVersion 25
     }
 
     signingConfigs {
@@ -38,69 +34,82 @@ android {
     flavorDimensions "abi", "machine"
     productFlavors {
         macPlus {
-            flavorDimension "machine"
+            dimension "machine"
             applicationId "name.osher.gil.minivmac"
             versionName "1.3.0"
+
+            ndk {
+                moduleName "mnvmcoreplus"
+            }
         }
 
         macII {
-            flavorDimension "machine"
+            dimension "machine"
             applicationId "name.osher.gil.minivmac.ii"
             versionName "2.3.0"
+
+            ndk {
+                moduleName "mnvmcoreii"
+            }
         }
 
         x86_64 {
-            flavorDimension "abi"
+            dimension "abi"
             ndk {
                 abiFilter "x86_64"
             }
         }
         x86 {
-            flavorDimension "abi"
+            dimension "abi"
             ndk {
                 abiFilter "x86"
             }
         }
         mips64 {
-            flavorDimension "abi"
+            dimension "abi"
             ndk {
                 abiFilter "mips64"
             }
         }
         mips {
-            flavorDimension "abi"
+            dimension "abi"
             ndk {
                 abiFilter "mips"
             }
         }
         armv8 {
-            flavorDimension "abi"
+            dimension "abi"
             ndk {
                 abiFilter "arm64-v8a"
             }
         }
         armv7 {
-            flavorDimension "abi"
+            dimension "abi"
             ndk {
                 abiFilter "armeabi-v7a"
             }
         }
         arm {
-            flavorDimension "abi"
+            dimension "abi"
             ndk {
                 abiFilter "armeabi"
             }
         }
         fat {
-            flavorDimension "abi"
+            dimension "abi"
+        }
+    }
+    externalNativeBuild {
+        ndkBuild {
+            path 'src/Android.mk'
         }
     }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
 
     compile 'com.nononsenseapps:filepicker:2.4.2'
 }
