--- a/minivmac/build.gradle
+++ b/minivmac/build.gradle
@@ -4,14 +4,13 @@ Properties props = new Properties()
 props.load(new FileInputStream(rootProject.file('release.properties')))
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 31
 
     defaultConfig {
         versionCode 46
 
-        minSdkVersion 14
-        targetSdkVersion 28
+        minSdkVersion 16
+        targetSdkVersion 31
     }
 
     signingConfigs {
@@ -68,12 +67,18 @@ android {
             path 'src/Android.mk'
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
 
     implementation 'com.nononsenseapps:filepicker:4.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
 }
