--- a/minivmac/src/main/AndroidManifest.xml
+++ b/minivmac/src/main/AndroidManifest.xml
@@ -2,17 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="name.osher.gil.minivmac">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <supports-screens android:anyDensity="true"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <supports-screens android:anyDensity="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light" >
+        android:requestLegacyExternalStorage="true"
+        android:theme="@style/Theme.AppCompat.Light">
         <activity
-            android:name="name.osher.gil.minivmac.MiniVMac"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:name=".MiniVMac"
+            android:configChanges="orientation|keyboardHidden|screenSize|screenLayout"
+            android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,21 +23,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="name.osher.gil.minivmac.CreateDisk">
-        </activity>
-        <activity android:name="name.osher.gil.minivmac.SettingsActivity">
-        </activity>
+        <activity android:name=".CreateDisk"></activity>
+        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".DiskManagerActivity" />
         <activity
             android:name="com.nononsenseapps.filepicker.FilePickerActivity"
+            android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/FilePickerTheme">
             <intent-filter>
                 <action android:name="android.intent.action.GET_CONTENT" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
