--- a/minivmac/src/main/AndroidManifest.xml
+++ b/minivmac/src/main/AndroidManifest.xml
@@ -23,20 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateDisk"></activity>
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".CreateDisk" />
+        <activity android:name=".SettingsActivity" />
         <activity android:name=".DiskManagerActivity" />
-        <activity
-            android:name="com.nononsenseapps.filepicker.FilePickerActivity"
-            android:exported="false"
-            android:label="@string/app_name"
-            android:theme="@style/FilePickerTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.GET_CONTENT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -45,7 +34,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/nnf_provider_paths" />
+                android:resource="@xml/provider_paths" />
         </provider>
     </application>
 
