--- a/minivmac/build.gradle
+++ b/minivmac/build.gradle
@@ -4,13 +4,13 @@ Properties props = new Properties()
 props.load(new FileInputStream(rootProject.file('release.properties')))
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 34
 
     defaultConfig {
-        versionCode 48
+        versionCode 49
 
         minSdkVersion 19
-        targetSdkVersion 31
+        targetSdkVersion 34
     }
 
     signingConfigs {
@@ -30,12 +30,12 @@ android {
         }
     }
 
-    flavorDimensions 'machine'
+    flavorDimensions = ['machine']
     productFlavors {
         macPlus {
             dimension 'machine'
             applicationId 'name.osher.gil.minivmac'
-            versionName '1.6.1'
+            versionName '1.6.2'
 
             ndk {
                 moduleName 'mnvmcoreplus'
@@ -45,7 +45,7 @@ android {
         macII {
             dimension 'machine'
             applicationId 'ninja.gil.miniv.ii'
-            versionName '2.6.1'
+            versionName '2.6.2'
 
             ndk {
                 moduleName 'mnvmcoreii'
@@ -70,15 +70,18 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'name.osher.gil.minivmac'
 }
 
 dependencies {
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment:2.7.1'
+    implementation 'androidx.navigation:navigation-ui:2.7.1'
+    implementation 'androidx.preference:preference:1.2.1'
 }
