--- a/minivmac/src/main/AndroidManifest.xml
+++ b/minivmac/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="name.osher.gil.minivmac">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <supports-screens android:anyDensity="true" />
 
