--- a/minivmac/build.gradle
+++ b/minivmac/build.gradle
@@ -12,7 +12,7 @@ android {
     defaultConfig {
         versionCode 51
 
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 34
 
         multiDexEnabled true
@@ -74,6 +74,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
     namespace 'name.osher.gil.minivmac'
 }
@@ -82,11 +83,11 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.7.1'
-    implementation 'androidx.navigation:navigation-ui:2.7.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.navigation:navigation-fragment:2.8.5'
+    implementation 'androidx.navigation:navigation-ui:2.8.5'
     implementation 'androidx.preference:preference:1.2.1'
 }
