--- a/minivmac/build.gradle
+++ b/minivmac/build.gradle
@@ -42,8 +42,10 @@ android {
             applicationId 'name.osher.gil.minivmac'
             versionName '1.6.5'
 
-            ndk {
-                moduleName 'mnvmcoreplus'
+            externalNativeBuild {
+                ndkBuild {
+                    arguments "NDK_FLAVOR=macPlus"
+                }
             }
         }
 
@@ -52,8 +54,10 @@ android {
             applicationId 'ninja.gil.miniv.ii'
             versionName '2.6.5'
 
-            ndk {
-                moduleName 'mnvmcoreii'
+            externalNativeBuild {
+                ndkBuild {
+                    arguments "NDK_FLAVOR=macII"
+                }
             }
         }
     }
